Updated Recipe Index with CSS
after finishing the CSS Foundations
went ahead and added some css to practice

--- a/Foundations/Odin_Recipes/recipes/carbonara.html
+++ b/Foundations/Odin_Recipes/recipes/carbonara.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carbonara Recipe</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Carbonara recipe</h1>
+    <h1 class="header">Carbonara recipe</h1>
     <img src="../images/image_carbonara.jpg" alt="Carbonara image" width="310" height="310">
     <h1>How to make Carbonara Pasta</h1>
     <h2>Ingredients :</h2>
