--- a/Foundations/Odin_Recipes/recipes/grilled_butterflied_chicken.html
+++ b/Foundations/Odin_Recipes/recipes/grilled_butterflied_chicken.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Butterflied Chicken Recipe</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
-    <h1>This is the Grilled Butterflied Chicken Recipe</h1>
+    <h1 class="header">This is the Grilled Butterflied Chicken Recipe</h1>
 
     <p>Here's an image :</p>
 
