--- a/Foundations/Odin_Recipes/recipes/chicken_fajitas.html
+++ b/Foundations/Odin_Recipes/recipes/chicken_fajitas.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Fajitas Recipe</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>This is the Chicken Fajitas Recipe :</h1>
+    <h1 class="header">This is the Chicken Fajitas Recipe :</h1>
     <img src="../images/image_chicken_fajitas.webp" alt="Chicken Fajitas Image" height="310" width="410">
     <p>Adapted from Kenji's grilled skirt steak fajitas recipe—with its rich and flavorful lime, soy sauce, and cumin-spiced marinade—this version reworks the recipe using chicken thighs instead of steak and alters the technique so that all you need is an oven and a single sheet pan. Because it's all cooked on a large half-sheet pan, it's perfect for feeding a larger group, plus the prep and cleanup are kept to a minimum. </p>
     
