--- a/Foundations/Odin_Recipes/recipes/lasagna.html
+++ b/Foundations/Odin_Recipes/recipes/lasagna.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>The best lasagna recipe</h1>
+    <h1 class="header">The best lasagna recipe</h1>
     <img src="../images/image_lasagna.webp" alt="lasagna image" width="410" height="310">
     <h1>How to Make Lasagna</h1>
     <ol>
