Added some CSS to update Recipes
After learning about boxes
margin, padding etc, went ahead
and updated recipe pages to practice

--- a/Foundations/Odin_Recipes/recipes/carbonara.html
+++ b/Foundations/Odin_Recipes/recipes/carbonara.html
@@ -10,7 +10,7 @@
     <h1 class="header">Carbonara recipe</h1>
     <img src="../images/image_carbonara.jpg" alt="Carbonara image" width="310" height="310">
     <h1>How to make Carbonara Pasta</h1>
-    <h2>Ingredients :</h2>
+    <h2 class="header">Ingredients :</h2>
     <ul>
         <li>6 ounces bacon, chopped</li>
         <li>2 tablespoons butter</li>
