--- a/Foundations/Odin_Recipes/recipes/lasagna.html
+++ b/Foundations/Odin_Recipes/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="header">The best lasagna recipe</h1>
     <img src="../images/image_lasagna.webp" alt="lasagna image" width="410" height="310">
-    <h1>How to Make Lasagna</h1>
+    <h2 class="header">How to Make Lasagna</h1>
     <ol>
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
