--- a/Foundations/javascript/operators.html
+++ b/Foundations/javascript/operators.html
@@ -47,12 +47,17 @@
 // " \t \n" - 2 = -2 Dont get it but here's the explanation Space characters are trimmed off string start and end when a string is converted to a number. Here the whole string consists of space characters, such as \t, \n and a “regular” space between them. So, similarly to an empty string, it becomes 0.
 // Maybe "\whatever" is consider like a space character so like nothing. so "\t" and "\n" equal 0 and the remaining real space too so 0+0+0-2=-2
 
-let a = Number(prompt("First number?", 1));
-let b = Number(prompt("Second number?", 2));
+// let a = Number(prompt("First number?", 1));
+// let b = Number(prompt("Second number?", 2));
 
 
 
-alert(a + b); // 12
+// alert(a + b); // 12
+// console.log("Hello, World!")
+
+let MAX = 57
+let actual = MAX - 13
+let percentage = actual / MAX
 
     </script>
     
